# sample-auto-extract-ai-ocr-app

./: .gitignore  README.md  cdk.json  package-lock.json
agentcore/runtime/: .dockerignore  Dockerfile  app.py  mcp.json  pyproject.toml
agentcore/runtime/src/: agent.py  config.py  tools.py  types.py  utils.py
lambda/api/: Dockerfile  Dockerfile.stepfunctions
lambda/api/app/: clients.py  config.py  main.py  step_functions_handler.py
lambda/api/app/domains/: __init__.py  extraction_engine.py  ocr_engine.py  prompts.py  schema_generator.py  template.py
lambda/api/app/repositories/: __init__.py  image_repository.py  job_repository.py  sagemaker_repository.py  schema_repository.py
lambda/api/app/routers/: agent.py  extraction.py  ocr.py  s3_sync.py  schema.py  (+1 more)
lambda/demo-custom-resource/: demo_invoice_schema.json  index.py
lib/: ocr-app-stack.ts
lib/constructs/: agent.ts  api.ts  database.ts  ocr.ts  step-functions.ts  web.ts
ocr-containers/deepseek-ocr/: Dockerfile  IMPLEMENTATION.md  TEST_RESULTS.md  app.py  model_handler.py  plan.md  requirements.txt  test_converter.py
ocr-containers/yomitoku/: Dockerfile  inference.py  requirements.txt
web/: .env.sample  package-lock.json  package.json
web/src/: config.ts
web/src/components/: AgentValidationPanel.tsx  ConfirmModal.tsx  ExtractedInfoDisplay.tsx  FileList.tsx  LoadingToast.tsx  OcrResultEditor.tsx  S3SyncModal.tsx  StatusBadge.tsx
web/src/pages/: Home.tsx  OCRResult.tsx  SchemaGenerator.tsx  Upload.tsx
web/src/types/: agent.ts  app-schema.ts  extraction.ts  ocr.ts
web/src/utils/: api.ts
(+18 files in other folders)
